--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run Update GitHub Activity
-        uses: ./
+        uses: TheDanniCraft/activity-log@v1
         with:
           GITHUB_USERNAME: "emilymng"
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
