--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,17 +1,18 @@
-name: Update README
-
+name: Update README activity
 on:
   schedule:
-    - cron: '*/30 * * * *' # Update every 30 minutes
+    - cron: "*/30 * * * *"
   workflow_dispatch:
-
 jobs:
-  build:
+  update-activity:
     runs-on: ubuntu-latest
-    name: Update Profile README
-
     steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: Readme-Workflows/recent-activity@v2.4.1
-        env:
+      - uses: actions/checkout@v4
+      - name: Run Update GitHub Activity
+        uses: TheDanniCraft/activity-log@v1
+        with:
+          GITHUB_USERNAME: emilymng
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          OUTPUT_STYLE: HTML
+          README_PATH: README.md
+          COMMIT_MESSAGE: ⚡ Update README.md with latest activity
