--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -11,6 +11,9 @@ jobs:
   update-readme:
     name: Update the WakaTime Stat
     runs-on: ubuntu-latest
+    permissions:
+          contents: write
+          pull-requests: write
     steps:
       # Use avinal/Profile-Readme-WakaTime@<latest-release-tag> for latest stable release
       # Do not change the line below until you have forked this repository
